--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <div>
             <div class="redes-sociais">
               <svg width="37" height="37" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <a href="https://www.instagram.com/weblaunches.webdesign/">
                 <circle cx="16.0887" cy="16.0887" r="16.0887" fill="white"/>
                 <path d="M16.0022 10.8723C13.1645 10.8723 10.8756 13.1617 10.8756 16C10.8756 18.8383 13.1645 21.1277 16.0022 21.1277C18.8399 21.1277 21.1288 18.8383 21.1288 16C21.1288 13.1617 18.8399 10.8723 16.0022 10.8723ZM16.0022 19.3337C14.1684 19.3337 12.6693 17.8387 12.6693 16C12.6693 14.1613 14.164 12.6663 16.0022 12.6663C17.8405 12.6663 19.3352 14.1613 19.3352 16C19.3352 17.8387 17.836 19.3337 16.0022 19.3337ZM22.5343 10.6625C22.5343 11.3275 21.9989 11.8585 21.3385 11.8585C20.6737 11.8585 20.1428 11.323 20.1428 10.6625C20.1428 10.002 20.6782 9.46647 21.3385 9.46647C21.9989 9.46647 22.5343 10.002 22.5343 10.6625ZM25.9297 11.8764C25.8539 10.2742 25.488 8.85507 24.3146 7.68582C23.1456 6.51657 21.7267 6.15062 20.1249 6.07029C18.4741 5.97657 13.5259 5.97657 11.8751 6.07029C10.2777 6.14616 8.8589 6.51211 7.68544 7.68136C6.51199 8.85061 6.15059 10.2698 6.07027 11.8719C5.97658 13.5232 5.97658 18.4724 6.07027 20.1236C6.14612 21.7258 6.51199 23.1449 7.68544 24.3142C8.8589 25.4834 10.2733 25.8494 11.8751 25.9297C13.5259 26.0234 18.4741 26.0234 20.1249 25.9297C21.7267 25.8538 23.1456 25.4879 24.3146 24.3142C25.4835 23.1449 25.8494 21.7258 25.9297 20.1236C26.0234 18.4724 26.0234 13.5276 25.9297 11.8764ZM23.797 21.8953C23.449 22.7701 22.7752 23.4439 21.8963 23.7965C20.58 24.3186 17.4568 24.1981 16.0022 24.1981C14.5477 24.1981 11.42 24.3142 10.1082 23.7965C9.23369 23.4484 8.55996 22.7745 8.20747 21.8953C7.68544 20.5788 7.80591 17.4549 7.80591 16C7.80591 14.5451 7.68991 11.4167 8.20747 10.1047C8.55549 9.22995 9.22922 8.55606 10.1082 8.2035C11.4244 7.68136 14.5477 7.80185 16.0022 7.80185C17.4568 7.80185 20.5845 7.68582 21.8963 8.2035C22.7708 8.5516 23.4445 9.22548 23.797 10.1047C24.319 11.4212 24.1985 14.5451 24.1985 16C24.1985 17.4549 24.319 20.5833 23.797 21.8953Z" fill="url(#paint0_linear_14_11)"/>
                 <defs>
@@ -33,13 +34,16 @@
                 <stop offset="1" stop-color="#F19E3E"/>
                 </linearGradient>
                 </defs>
+                </a>
               </svg>
             </div>
 
             <div class="redes-sociais">
               <svg width="37" height="37" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <a href="https://www.behance.net/yasminoliveira5">
                 <circle cx="16.9113" cy="16.0887" r="16.0887" fill="#4176FA"/>
                 <path d="M15.25 14.825C16.2437 14.2778 16.7625 13.4497 16.7625 12.1609C16.7625 9.61922 15.1188 9 13.2219 9H8V21.7588H13.3688C15.3813 21.7588 17.2719 20.6464 17.2719 18.0543C17.2719 16.4522 16.6125 15.2678 15.25 14.825ZM10.4344 11.1781H12.7188C13.5969 11.1781 14.3875 11.4625 14.3875 12.6361C14.3875 13.7197 13.7719 14.1554 12.9031 14.1554H10.4344V11.1781ZM13.0375 19.5915H10.4344V16.0778H13.0875C14.1594 16.0778 14.8375 16.5926 14.8375 17.8995C14.8375 19.1883 14.0281 19.5915 13.0375 19.5915ZM24.2406 10.9261H19.75V9.66962H24.2406V10.9261ZM26 17.2731C26 14.5406 24.6125 12.2617 22.0969 12.2617C19.6531 12.2617 17.9937 14.3786 17.9937 17.1507C17.9937 20.0271 19.5656 22 22.0969 22C24.0125 22 25.2531 21.0064 25.85 18.8931H23.9062C23.6969 19.6815 22.8344 20.0991 22.1656 20.0991C20.875 20.0991 20.1969 19.2279 20.1969 17.7483H25.9813C25.9906 17.5971 26 17.4351 26 17.2731ZM20.2 16.1498C20.2719 14.9366 20.9719 14.177 22.0281 14.177C23.1344 14.177 23.6906 14.9258 23.7844 16.1498H20.2Z" fill="white"/>
+                </a>
               </svg>
             </div>  
           </div>
@@ -49,15 +53,15 @@
 
         <div class="banner-content">
           <div class="banner-text">
-            <h1>Impulsione seu negócio online com<span style="background: linear-gradient(to left, #B5EEFF, #6FD4FF); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900; font-family: SF Pro Text;"> páginas de alta conversão!</span></h1>
+            <h1>Impulsione seu negócio online com<span style="background: linear-gradient(to left, #B5EEFF, #6FD4FF); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900; font-family: SF Pro Text;"> páginas que vendem!</span></h1>
             <p>Obtenha um site profissional e responsivo gerenciável via Painel Cliente. Para você que é:
             <ul>
                 <li>Infoprodutor que deseja landing pages visualmente impactantes</li>
                 <li>Empresa que deseja se posicionar no mercado digital</li>
             </ul>
             </p>
-            <a href="#" class="cta-button">Solicitar orçamento</a>
-            <a href="#" class="cta-button2">Portfolio</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdNmG6lv0GX_FHyd3M-QDp_Kgvd9r7SOSIfqrCyyeE3YId12A/viewform?usp=sf_link" target="_blank" class="cta-button">Solicitar orçamento</a>
+            <a href="https://www.behance.net/yasminoliveira5" target="_blank" class="cta-button2">Portfolio</a>
           </div>
           <div class="banner-image">
            <!--Aqui ficaria uma imagem-->
@@ -136,7 +140,7 @@
               <p>Conceitos, cores, tipografia, texturas,
                 fotografia, etc… Elementos que
                 refletem seu posicionamento e do
-                seu produto para comunica
+                seu produto para comunicar
                  exatamente o que você busca.</p>
             </div>
             <div class="card">
@@ -152,10 +156,7 @@
                 
               <h3>Páginas otimizadas e de
                 alta performance</h3>
-              <p>Algumas pesquisas
-                apontam que 40% dos visitantes
-                abandonam páginas que levam mais
-                de 3 segundos para carregar.</p>
+              <p>Otimizações inclusas para uma página leve e de carregamento rápido, melhorando a performance e rankeamento nas pesquisas do Google.</p>
             </div>
             <div class="card">
               <svg class="shadow" width="39" height="31" viewBox="0 0 39 31" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -173,7 +174,7 @@
                 de marketing</h3>
               <p>
 
-                Google Analytics, Google Search
+                Configuração e integração com Google Analytics, Google Search
                 Console, Google Tag Manager,
                 Facebook pixel,  Active Campaing,
                 Mail Chimp, etc</p>
@@ -194,10 +195,10 @@
               <p>Garantimos que você terá total
                 autonomia na manutenção ou
                 atualização dos conteúdos das páginas
-                com nossa mentoria pós entrega</p>
+                com nossa mentoria pós entrega.</p>
             </div>
           </div>
-          <a href="#" class="cta-button">Solicitar orçamento</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdNmG6lv0GX_FHyd3M-QDp_Kgvd9r7SOSIfqrCyyeE3YId12A/viewform?usp=sf_link" target="_blank" class="cta-button">Solicitar orçamento</a>
         </div>
       </section>
 
@@ -234,8 +235,8 @@
             </div>
           </div>
           
-          <a href="#" class="cta-button">Solicitar orçamento</a>
-            <a href="#" class="cta-button2">Portfolio</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdNmG6lv0GX_FHyd3M-QDp_Kgvd9r7SOSIfqrCyyeE3YId12A/viewform?usp=sf_link" class="cta-button">Solicitar orçamento</a>
+            <a href="https://www.behance.net/yasminoliveira5" target="_blank" class="cta-button2">Portfolio</a>
         </div>
       </section>
 
